--- a/src/assets/style/App.css
+++ b/src/assets/style/App.css
@@ -5,6 +5,15 @@ body {
   background-color: #f5f5f5;
   margin-top: 20px !important;
 }
+.selected,
+.selected:focus,
+.selected:hover {
+  background-color: #333;
+}
+.btn-default .ball {
+  margin-bottom: 0px;
+}
+
 /* Mark winner */
 .mark {
   background-color: #8bc34a;
@@ -111,10 +120,12 @@ body {
   padding-left: 2px;
   padding-right: 2px;
   border: 1px solid #333;
+  width: 30px;
+  height: 22px;
+  text-align: center;
   /*border-left: 1px solid #FFF;
     border-right: 1px solid #FFF;*/
 }
-
 /* Custom styles */
 .default {
   display: inline-block;
@@ -122,6 +133,9 @@ body {
   padding-left: 2px;
   padding-right: 2px;
   border: 1px solid #ccc;
+  width: 30px;
+  height: 22px;
+  text-align: center;
 }
 .defaultState {
   background-color: #333;
